header fixed terminato
metà sezione prima

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width">
@@ -8,25 +9,133 @@
     <title></title>
   </head>
   <body>
-      <header>
-
-      </header>
-      <section>
-
-      </section>
-      <section>
-
-      </section>
-      <section>
-
-      </section>
-      <section>
-
-      </section>
-      <footer>
-
-      </footer>
+    <!-- inizio HEADER ------------>
+    <div id="width">
 
 
+        <header>
+          <nav id="fixed" class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+              <div class="row">
+                <div class="col-xs-6">
+                  <a href="#">START BOOTSTRAP</a>
+
+                </div>
+                <div class="col-xs-6">
+                  <div class="header_dx">
+                    <a href="#">PORTFOLIO</a>
+                    <a href="#">ABOUT</a>
+                    <a href="#">CONTACT</a>
+                  </div>
+
+                </div>
+
+              </div>
+            </div>
+          </nav>
+
+        </header>
+        <!-- fine HEADER ------------>
+        <!-- inizio PRIMA sezione --->
+        <section id="sez_2">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-10 col-lg-8 col-lg-offset-2">
+                <div id="cane">
+                  <img src="http://blackrockdigital.github.io/startbootstrap-freelancer/img/avataaars.svg" alt="">
+                </div>
+
+                <h1 class="text-center">START BOOTSTRAP</h1>
+
+
+
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- fine PRIMA sezione ----->
+        <!-- inizio SECONDA  -------->
+        <section>
+          <div class="container">
+            <div class="row">
+              <div class="">
+
+              </div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="">
+
+              </div>
+              <div class="">
+
+              </div>
+              <div class="">
+
+              </div>
+              <div class="">
+
+              </div>
+              <div class="">
+
+              </div>
+              <div class="">
+
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- fine SECONDA ----------->
+        <!-- inizio TERZA ----------->
+        <section>
+          <div class="container">
+            <div class="row">
+              <div class="">
+
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- fine TERZA sezione ----->
+        <!-- inizio QUARTA sezione -->
+        <section>
+          <div class="container">
+            <div class="row">
+              <div class="">
+
+              </div>
+              <div class="">
+
+              </div>
+
+            </div>
+
+          </div>
+
+        </section>
+        <!-- fine QUARTA sezione ---->
+        <!-- inizio FOOTER ---------->
+        <footer>
+          <div class="container">
+            <div class="row">
+              <div class="">
+
+              </div>
+              <div class="">
+
+              </div>
+              <div class="">
+
+              </div>
+
+            </div>
+
+          </div>
+
+        </footer>
+        <!-- fine FOOTER ------------>
+
+      </div>
   </body>
 </html>
