--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
+    <script src="https://kit.fontawesome.com/577c099c56.js" crossorigin="anonymous"></script>
+
+
     <title></title>
   </head>
   <body>
@@ -46,6 +49,16 @@
                 </div>
 
                 <h1 class="text-center">START BOOTSTRAP</h1>
+                <div class="gatto">
+                  <hr>
+                  <i class="fas fa-star"></i>
+                  <hr>
+                  <h3>
+                    Graphic Artist - Web Designer - Illustrator
+                  </h3>
+                </div>
+
+
 
 
 
